@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 8654748c8081c682ee27c5f5fe30cede16096f4d ChangeLog
+SHA1 e69878c76b739b5ed58a4dc48ccad06e22eb8932 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 d0380379b2c48c8a916ff6f5003004e365be1205 META.yml
-SHA1 1a238c47cacd956665a208bc94136e5695d8adc6 MYMETA.json
-SHA1 9ecb2203f3750b5b1229cf8377bbcda714724c09 MYMETA.yml
-SHA1 957d54a33ad6cbcec460fb173fda918d2a2f7830 Makefile.PL
+SHA1 b8771dbe1304db7f33b6fd12d18172ab2684e768 META.yml
+SHA1 ba667ea699d30d23095a654500b9e5c63944b622 MYMETA.json
+SHA1 f9083cfbb4c925f94f215341ee3a1227603ec4f3 MYMETA.yml
+SHA1 eae4b2fb5a315bb547ebddebf71b5ce9a23f9020 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 02e870d3db80f49449adbe381c669d4f8d4248dc lib/Net/FullAuto.pm
+SHA1 f550935f9f7d48c4201c01c61c995600d942d70c lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 7953e51185c3b504220553e016c97caba92a8aa8 lib/Net/FullAuto/FA_Core.pm
+SHA1 cdc52a9e200f9e03e6f95107b39332d1fa03ab98 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSkUF7AAoJEBa/9Pad787ESO0IAKxI+mps3cN1WHIXbcyPDCtZ
-fT0LRwwhKKAjlhCJ5ddcofMJh/WM1uCFeHkztmZNJZNXbHo3zja5y9qwiC+joSQX
-WaFGtLmouDWz++XwOeJL6E22CiJ0ILRhwUl++nN3qwdsTGA831NrQff0Dte0P3sE
-3AcV8z6NERkiFf9YDienykDbeVPhyT57iw6fIE5BVpVC3aUOqLH5/3v8NJjIiqtK
-TzMN7egeDQVwQs64gcaYd3YtPsMi2SCdFDC5HBU5K8RUIiLleqktsZukrQ2+KgNE
-cWMSxHNuCYwWtgJNQi5h14tPOnaO/lb0P3zNqwKNXfTiwFSw5d2NsVfOjIeYtDA=
-=etW5
+iQEcBAEBAgAGBQJSkjQkAAoJEBa/9Pad787EhSYH+wX1PS6GfiGGOo3MGobipbqv
+DT8KB9virHLcFB3q5/F4N82fLvJ32Vma+y1n/EDYm9V4OdRIY5OPxxepF0zcFrti
+4fpzqZ9ot2s05wlYyTUI5i2+BOillTnen8ynqMqqEKB/xWRQ6KdI+mbsLtQIxM6G
+e823vvZPRg6/24zuzpUucxw7eTk2j8u9INbv7VrWqAn0ec4+oZJS4nAnph5UD4yC
+Fe1zl0NM89yegwPShQCIOpbpg5/6Abe6e+7IycP0J7gDOmCeDoc5xxU1OeAM3jcK
+hQb4oV17Vvi8jEFFHvXlZwdyrFJYUvLKkyA58X2uRLPPih8gu8wf1w566ghJqOk=
+=gGsZ
 -----END PGP SIGNATURE-----
